# engine-dev-school-1-hello-opengl-triangle

./: .gitignore  CMakeLists.txt  README.md
src/: main.cpp
